--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "OpenClassrooms (ex Site du Zero)",
   "license": "GNU GPL",
   "devDependencies": {
-    "grunt": "~0.4.4"
+    "grunt": "~0.4.4",
+    "load-grunt-config": "~0.8.0-beta.1",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
